Z-Index Safari Fix

--- a/shadowstyle.css
+++ b/shadowstyle.css
@@ -23,10 +23,11 @@
     backface-visibility: visible;
     perspective: 1400px;
 
-    /*
-    transform: translate3d(0px, 0px, 0px);
-    transform: translate3d(0,0,0) translateZ(1000px);
-     */
+
+
+    transform: translate3d(0px, 0px, 1000px);
+    -webkit-transform: translate3d(0px,0px,10000px);
+
 }
 
 .page {
@@ -42,10 +43,14 @@
     background-position: center;
     /* -webkit-transform: translate3d(0,0,1px); */
 
-    /*
-    transform-style: preserve-3d;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-position: center;
+
+
     transform: translate3d(0px, 0px, 0px);
-     */
+    -webkit-transform: translate3d(0px, 0px, 0px);
+
     /* z-index: 1; */
     /* transition-timing-function: linear; */
 }
@@ -60,9 +65,9 @@
     height: 100%;
     backface-visibility: visible;
     z-index: 1; /* -1 */
-    /*
-    transform: translate3d(0px, 0px, 0px);
-     */
+    z-index: 1; /* -1 */
+
+
 }
 
 .refresh, .imprint {
